[project]
name = "telegram-screenshot-bot"
version = "0.1.0"
description = "Telegram bot for creating screenshots from Google Sheets"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.1.1",
    "aiohttp>=3.8.0",
    "opencv-python-headless>=4.8.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "psutil>=7.0.0",
    "telegram>=0.0.1",
    "python-telegram-bot==20.7",
]
